--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "conduct.js",
   "version": "0.0.1",
   "description": "conduct.js allows JavaScript to respond to media queries by executing callbacks as breakpoints are matched and unmatched",
-  "main": "conduct.js",
+  "main": "src/conduct.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
