--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "conduct.js allows JavaScript to respond to media queries by executing callbacks as breakpoints are matched and unmatched",
   "main": "src/conduct.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt karma"
   },
   "repository": {
     "type": "git",
